added endpoint to delete a course
