# src/main/kotlin/uk/gov/justice/digital/hmpps/hmppsaccreditedprogrammesapi/restapi/controller/CourseController.kt
@@ -192,6 +192,11 @@ constructor(
     return ResponseEntity.ok(savedCourse.toApi())
   }
 
+  override fun deleteCourse(id: UUID): ResponseEntity<Unit> {
+    courseService.delete(id)
+    return ResponseEntity.ok(null)
+  }
+
   fun generateRandom10AlphaString(): String {
     val chars = ('A'..'Z')
     val charsList = chars.toList()
